Added start game functionality, fixed some reference errors and added the tic tac toe grid

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="cell" data-cell></div>
 			<div class="cell" data-cell></div>
 		</div>
-		<div class="controls">
+		<div id="controls">
 			<input
 				type="text"
 				name=""
